# dotfiles

./: .aliases-and-envs  .aliases-and-envs.zsh  .aliases.zsh  .bash_profile  .bashrc  .condarc  .curlrc  .fasd  .fdignore  .fzf-config.zsh  .fzf-config_mac.zsh  .fzf-env  .fzf-env.zsh  .fzf.bash  .fzf.zsh  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .ignore  .p10k.zsh  .pdbhistory  .profile  .profile_mac  .pylintrc  .sourcery.yaml  .tmux.conf  .tmux_mac.conf  .viminfo  .vimrc  .wgetrc  .zlogin  .zlogout  .zpreztorc  .zprofile  .zprofile_mac  .zshrc  .zshrc_mac  AGENTS.md  CLAUDE.md  (+48 more)
.jupyter/: migrated
.matplotlib/: fontList.cache  fontList.json
.python/: .gitignore  db.py  init.ipynb  job_submitter.py  ml_helpers.py  mongo.ipynb  parallel.ipynb  util.py
.vim/: .netrwhist
aichat/: config.yaml  functions  roles.yaml
claude/: allowed-tools-ruleset.txt
cli_agents/: agent.py  agent.yaml  agent_old.py  agent_utils.py  rename.sh  tools.py
codex/: codex-context.md  config.toml
dot_tmux/: dot_DS_Store
editors/: editors-context.md  find_files.sh  hx_config.toml  hx_languages.toml
fzf/: .fzf-config.zsh  .fzf-env.zsh  .fzf.bash  .fzf.zsh  fzf-context.md  fzf-history-delete.zsh
install/: install-context.md  install-parquet-tools.sh  (+6 more)
wip/: .tmux.conf.sidepanel  aws_common.sh  debug.py  dracula.conf  example_usage.py  imessage_analyzer.py  imessage_extractor.py  main.py  messages_export.csv  migrate_settings_to_agy.py  process_json.sh  project.md  pyproject.toml  result.txt  show-tmux-popup.sh  stop_aws  test_imessage_tools.py  wip-context.md
(+459 files in other folders)
