[project]
name = "wip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb>=0.13.13",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "joblib>=1.5.1",
    "machine-learning-helpers",
    "matplotlib>=3.10.3",
    "mysql-connector-python>=9.3.0",
    "numpy>=2.3.0",
    "ollama>=0.5.1",
    "openai>=1.85.0",
    "pandas>=2.3.0",
    "pandas-flavor>=0.7.0",
    "polars>=1.30.0",
    "pyjanitor>=0.31.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
machine-learning-helpers = { git = "https://github.com/vmasrani/machine_learning_helpers.git" }
